Product CRUD işlemleri tamamlandı. AppUser ve  User Login yapılacak

--- a/BookStore_NTierProject/BookStore_NTierProject.UI/Areas/Admin/Views/Category/Add.cshtml
+++ b/BookStore_NTierProject/BookStore_NTierProject.UI/Areas/Admin/Views/Category/Add.cshtml
@@ -5,9 +5,9 @@
 }
 
 <section class="content-header">
-    <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
-        <li><a href="#">Forms</a></li>
+    <ol class="breadcrumb bg-gray-active">
+        <li><a href="/Admin/Home/AdminHomeIndex"><i class="fa fa-home"></i> Home</a></li>
+        <li><a href="/Admin/Category/List">Category List</a></li>
         <li class="active">Add Category</li>
     </ol>
 </section>
@@ -32,6 +32,7 @@
                     </div>
                     <div class="box-footer">
                         <button type="submit" class="btn btn-primary">Submit</button>
+                        <a href="/Admin/Category/List" class="btn btn-default">Category List</a>
                     </div>
                 </form>
             </div>
