--- a/BookStore_NTierProject/BookStore_NTierProject.UI/Areas/Admin/Views/Category/Update.cshtml
+++ b/BookStore_NTierProject/BookStore_NTierProject.UI/Areas/Admin/Views/Category/Update.cshtml
@@ -7,9 +7,9 @@
 @model BookStore_NTierProject.UI.Areas.Admin.Models.DTO.CategoryDTO
 
 <section class="content-header">
-    <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
-        <li><a href="#">Forms</a></li>
+    <ol class="breadcrumb bg-gray-active">
+        <li><a href="\Admin\Home\AdminHomeIndex"><i class="fa fa-home"></i> Home</a></li>
+        <li><a href="\Admin\Category\List">Category List</a></li>
         <li class="active">Add Category</li>
     </ol>
 </section>
@@ -35,6 +35,7 @@
                     <input type="hidden" name="ID" value="@Model.ID" />
                     <div class="box-footer">
                         <button type="submit" class="btn btn-primary">Submit</button>
+                        <a href="\Admin\Category\List" class="btn btn-default ">Category List</a>
                     </div>
                 </form>
             </div>
