Appuser croud  ve Login işleleri yapılacak.

--- a/BookStore_NTierProject/BookStore_NTierProject.UI/Areas/Admin/Views/Category/Update.cshtml
+++ b/BookStore_NTierProject/BookStore_NTierProject.UI/Areas/Admin/Views/Category/Update.cshtml
@@ -34,7 +34,7 @@
                     </div>
                     <input type="hidden" name="ID" value="@Model.ID" />
                     <div class="box-footer">
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-primary">Submit</button>&nbsp;
                         <a href="\Admin\Category\List" class="btn btn-default ">Category List</a>
                     </div>
                 </form>
