--- a/BookStore_NTierProject/BookStore_NTierProject.UI/Areas/Admin/Views/Product/Add.cshtml
+++ b/BookStore_NTierProject/BookStore_NTierProject.UI/Areas/Admin/Views/Product/Add.cshtml
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                     <div class="box-footer">
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-primary">Submit</button>&nbsp;
                         <a href="/Admin/Product/List"class="btn btn-default">Product List</a>
                     </div>
                 </form>
