--- a/BookStore_NTierProject/BookStore_NTierProject.UI/Areas/Admin/Views/Product/Update.cshtml
+++ b/BookStore_NTierProject/BookStore_NTierProject.UI/Areas/Admin/Views/Product/Update.cshtml
@@ -55,7 +55,7 @@
                     </div>
                     <input type="text" style="visibility:hidden" name="ID" value="@Model.Products.ID" />
                     <div class="box-footer">
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-primary">Submit</button> &nbsp;      
                         <a href="\Admin\Product\List" class="btn btn-default">Product List</a>
                     </div>
                 </form>
