--- a/BookStore_NTierProject/BookStore_NTierProject.UI/Areas/Admin/Views/Category/Add.cshtml
+++ b/BookStore_NTierProject/BookStore_NTierProject.UI/Areas/Admin/Views/Category/Add.cshtml
@@ -31,7 +31,7 @@
                         </div>
                     </div>
                     <div class="box-footer">
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-primary">Submit</button>&nbsp;
                         <a href="/Admin/Category/List" class="btn btn-default">Category List</a>
                     </div>
                 </form>
