--- a/BookStore_NTierProject/BookStore_NTierProject.UI/Areas/Admin/Views/Shared/_AdminLayoutPage.cshtml
+++ b/BookStore_NTierProject/BookStore_NTierProject.UI/Areas/Admin/Views/Shared/_AdminLayoutPage.cshtml
@@ -38,7 +38,7 @@
     <div class="wrapper">
         <header class="main-header">
             <!-- Logo -->
-            <a href="../../index2.html" class="logo">
+            <a href="/Admin/Home/AdminHomeIndex" class="logo">
                 <!-- mini logo for sidebar mini 50x50 pixels -->
                 <span class="logo-mini"><b>A</b>LT</span>
                 <!-- logo for regular state and mobile devices -->
@@ -47,12 +47,7 @@
             <!-- Header Navbar: style can be found in header.less -->
             <nav class="navbar navbar-static-top">
                 <!-- Sidebar toggle button-->
-                <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </a>
+                
                 
             </nav>
         </header>
